@@ -1,3 +1,12 @@
+2004-05-24  MATSUURA Kyo <kyo@chimons.org>
+
+	* sb-security-memo.el (shimbun-security-memo-url): Reduced.
+	(shimbun-security-memo-group-alist): New variable.
+	(shimbun-security-memo-coding-system): Removed.
+	(shimbun-security-memo-groups): New method.
+	(shimbun-index-url): Ditto.
+	(shimbun-reply-to): Check the current group name.
+
 2004-05-22  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
 
 	* w3m.el (w3m-fontify): Remove tags in the form element except for
